--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,7 @@
-<p>nav-bar works!</p>
+
+<!-- <a [routerLink]="['profile']" *ngIf="isAuthenticated">Profile</a> -->
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h5 class="my-0 mr-md-auto font-weight-normal">New FSC from AIG</h5>
+    <nav class="my-2 my-md-0 mr-md-3">
+    </nav>
+</div>
