Update the project

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <ag-grid-angular 
-    style="width: 500px; height: 500px;" 
+    style="width: 100%; height: 600px;" 
     class="ag-theme-balham"
     [rowData]="rowData" 
     [columnDefs]="columnDefs"
